complete pre-requisites

--- a/html/query_people.html
+++ b/html/query_people.html
@@ -32,7 +32,7 @@
         <img src="people_sidebar.jpg" alt="People Sidebar Image">
     </aside>
     <footer>
-        <p>&copy; 2024 Query People Project</p>
+        <p>&copy; psylp4_comp1004_cw2</p>
     </footer>
     <script src="query_people.js"></script>
 </body>
