--- a/html/query_vehicles.html
+++ b/html/query_vehicles.html
@@ -32,7 +32,7 @@
         <img src="vehicles_sidebar.jpg" alt="Vehicles Sidebar Image">
     </aside>
     <footer>
-        <p>&copy; 2024 Query Vehicles Project</p>
+        <p>&copy; psylp4_comp1004_cw2</p>
     </footer>
     <script src="query_vehicles.js"></script>
 </body>
