--- a/html/update_database.html
+++ b/html/update_database.html
@@ -34,7 +34,7 @@
         <img src="update_sidebar.jpg" alt="Update Sidebar Image">
     </aside>
     <footer>
-        <p>&copy; 2024 Update Database Project</p>
+        <p>&copy; psylp4_comp1004_cw2</p>
     </footer>
     <script src="update_database.js"></script>
 </body>
