--- a/front_end/search-people.html
+++ b/front_end/search-people.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search People</title>
+    <title>People Search</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>&emsp; Search People</h1>
+        <h1>People Search</h1>
         <nav>
             <ul>
-                <li><a href="search-people.html">Search People</a>&emsp;<a href="search-vehicles.html">Search Vehicles</a>&emsp;<a href="add-vehicle.html">Add Vehicle</a></li>
+                <li><a href="search-people.html">People search</a>&emsp;<a href="search-vehicles.html">Vehicle search</a>&emsp;<a href="add-vehicle.html">Add a vehicle</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <!-- Search People Form -->
+        <form id="search-people-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name">
+            <label for="license">License Number:</label>
+            <input type="text" id="license" name="license">
+            <button type="submit">Submit</button>
+        </form>
+        <div id="results"></div>
     </main>
     <aside>
         <img src="people.jpg" alt="People Image">
@@ -25,5 +33,6 @@
     <footer>
         <p>&copy; psylp4_comp1004_cw2</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
