front-end reset

--- a/front_end/search-people.html
+++ b/front_end/search-people.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>People Search</h1>
+        <h1>&emsp; People Search</h1>
         <nav>
             <ul>
                 <li><a href="search-people.html">People search</a>&emsp;<a href="search-vehicles.html">Vehicle search</a>&emsp;<a href="add-vehicle.html">Add a vehicle</a></li>
@@ -17,17 +17,9 @@
     </header>
     <main>
         <!-- Search People Form -->
-        <form id="search-people-form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name">
-            <label for="license">License Number:</label>
-            <input type="text" id="license" name="license">
-            <button type="submit">Submit</button>
-        </form>
-        <div id="results"></div>
     </main>
     <aside>
-        <img src="people.jpg" alt="People Image">
+        <img src="people.jpg">
         <!-- Other relevant information -->
     </aside>
     <footer>
