--- a/front_end/search-vehicles.html
+++ b/front_end/search-vehicles.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Vehicle Search</h1>
+        <h1>&emsp; Vehicle Search</h1>
         <nav>
             <ul>
                 <li><a href="search-people.html">People search</a>&emsp;<a href="search-vehicles.html">Vehicle search</a>&emsp;<a href="add-vehicle.html">Add a vehicle</a></li>
@@ -17,15 +17,9 @@
     </header>
     <main>
         <!-- Search Vehicles Form -->
-        <form id="search-vehicles-form">
-            <label for="rego">Registration Number:</label>
-            <input type="text" id="rego" name="rego">
-            <button type="submit">Submit</button>
-        </form>
-        <div id="results"></div>
     </main>
     <aside>
-        <img src="vehicles.jpg" alt="Vehicles Image">
+        <img src="vehicles.jpg">
         <!-- Other relevant information -->
     </aside>
     <footer>
