edited html files

--- a/front_end/add-vehicle.html
+++ b/front_end/add-vehicle.html
@@ -20,14 +20,19 @@
         <form id="addVehicleForm">
             <label for="rego">Vehicle Registration:</label>
             <input type="text" id="rego" name="rego">
+            <hr color="white">
             <label for="make">Make:</label>
             <input type="text" id="make" name="make">
+            <hr color="white">
             <label for="model">Model:</label>
             <input type="text" id="model" name="model">
+            <hr color="white">
             <label for="colour">Colour:</label>
             <input type="text" id="colour" name="colour">
+            <hr color="white">
             <label for="owner">Owner:</label>
             <input type="text" id="owner" name="owner">
+            <hr color="white">
             <button type="submit">Add</button>
         </form>
         <div id="ownerForm" style="display: none;">
