--- a/front_end/search-people.html
+++ b/front_end/search-people.html
@@ -20,8 +20,10 @@
         <form id="searchPeopleForm">
             <label for="name">Driver Name:</label>
             <input type="text" id="name" name="name">
+            <hr color="white">
             <label for="license">License Number:</label>
             <input type="text" id="license" name="license">
+            <hr color="white">
             <button type="submit">Submit</button>
         </form>
         <div id="results"></div>
