--- a/front_end/search-vehicles.html
+++ b/front_end/search-vehicles.html
@@ -20,6 +20,7 @@
         <form id="searchVehiclesForm">
             <label for="rego">Vehicle Registration:</label>
             <input type="text" id="rego" name="rego">
+            <hr color="white">
             <button type="submit">Submit</button>
         </form>
         <div id="results"></div>
