--- a/front_end/add-vehicle.html
+++ b/front_end/add-vehicle.html
@@ -40,16 +40,22 @@
             <form id="addOwnerForm">
                 <label for="personid">Person ID:</label>
                 <input type="text" id="personid" name="personid">
+                <hr color="white">
                 <label for="name">Owner Name:</label>
                 <input type="text" id="name" name="name">
+                <hr color="white">
                 <label for="address">Owner Address:</label>
                 <input type="text" id="address" name="address">
+                <hr color="white">
                 <label for="dob">Owner Date of Birth:</label>
                 <input type="text" id="dob" name="dob">
+                <hr color="white">
                 <label for="license">Owner License Number:</label>
                 <input type="text" id="license" name="license">
+                <hr color="white">
                 <label for="expire">Owner License Expiry Date:</label>
                 <input type="text" id="expire" name="expire">
+                <hr color="white">
                 <button type="submit">Add owner</button>
             </form>
         </div>
