reset front-end

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add a Vehicle</title>
+    <title>People Search</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>&emsp; Add a Vehicle</h1>
+        <h1>&emsp; People Search</h1>
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">People search</a>&emsp;<a href="search-vehicles.html">Vehicle search</a>&emsp;<a href="add-vehicle.html">Add a vehicle</a></li>
@@ -16,10 +16,10 @@
         </nav>
     </header>
     <main>
-        <!-- Add Vehicle Form -->
+        <!-- Search People Form -->
     </main>
     <aside>
-        <img src="add-vehicle.jpg" alt="add image">
+        <img src="people.jpg" alt="add image">
         <!-- Other relevant information -->
     </aside>
     <footer>
