--- a/front_end/search-vehicles.html
+++ b/front_end/search-vehicles.html
@@ -11,22 +11,14 @@
         <h1>&emsp; Vehicle Search</h1>
         <nav>
             <ul class="nav-links">
-                <li><a href="search-people.html">People search</a>&emsp;<a href="search-vehicles.html">Vehicle search</a>&emsp;<a href="add-vehicle.html">Add a vehicle</a></li>
+                <li><a href="index.html">People search</a>&emsp;<a href="search-vehicles.html">Vehicle search</a>&emsp;<a href="add-vehicle.html">Add a vehicle</a></li>
             </ul>
         </nav>
     </header>
-    <main id="container">
-        <!-- Search Vehicles Form -->
-        <form id="searchVehiclesForm">
-            <label for="rego">Vehicle Registration:</label>
-            <input type="text" id="rego" name="rego">
-            <hr color="white">
-            <button type="submit">Submit</button>
-        </form>
-        <div id="results"></div>
+    <main>
     </main>
     <aside>
-        <img src="vehicles.jpg">
+        <img src="vehicles.jpg" alt="add image">
         <!-- Other relevant information -->
     </aside>
     <footer>
