--- a/front_end/search-vehicles.html
+++ b/front_end/search-vehicles.html
@@ -16,6 +16,13 @@
         </nav>
     </header>
     <main>
+        <form id="vehicle-search-form">
+            <label for="rego">Vehicle Registration:</label>
+            <input type="text" id="rego" name="rego">
+            <hr color="white">
+            <button type="submit">Submit</button>
+        </form>
+        <div id="results"></div>
     </main>
     <aside>
         <img src="vehicles.jpg" alt="add image">
