--- a/front_end/index.html
+++ b/front_end/index.html
@@ -16,7 +16,16 @@
         </nav>
     </header>
     <main>
-        <!-- Search People Form -->
+        <form id="people-search-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name">
+            <hr color="white">
+            <label for="license">License Number:</label>
+            <input type="text" id="license" name="license">
+            <hr color="white">
+            <button type="submit">Submit</button>
+        </form>
+        <div id="results"></div>
     </main>
     <aside>
         <img src="people.jpg" alt="add image">
