--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     <footer>
         <p>&copy; psylp4_comp1004_cw2</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
