--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         <form id="people-search-form">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name">
+            <hr color="white">
             <label for="license">License Number:</label>
             <input type="text" id="license" name="license">
+            <hr color="white">
             <button type="submit">Submit</button>
         </form>
         <div id="results"></div>
