--- a/search-vehicles.html
+++ b/search-vehicles.html
@@ -19,6 +19,7 @@
         <form id="vehicle-search-form">
             <label for="rego">Vehicle Registration:</label>
             <input type="text" id="rego" name="rego">
+            <hr color="white">
             <button type="submit">Submit</button>
         </form>
         <div id="results"></div>
