edited html files

--- a/add-vehicle.html
+++ b/add-vehicle.html
@@ -59,6 +59,7 @@
             </form>
         </div>
         <div id="message"></div>
+        <div id="results"></div>
     </main>
     <aside>
         <img src="add-vehicle.jpg" alt="add image">
