--- a/search-vehicles.html
+++ b/search-vehicles.html
@@ -22,6 +22,7 @@
             <hr color="white">
             <button type="submit">Submit</button>
         </form>
+        <div id="message"></div>
         <div id="results"></div>
     </main>
     <aside>
