--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <hr color="white">
             <button type="submit">Submit</button>
         </form>
+        <div id="message"></div>
         <div id="results"></div>
     </main>
     <aside>
