--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <input type="text" id="license" name="license">
             <hr color="white">
             <button type="submit">Submit</button>
-        </form><div id="message"></div>
+        </form>
+        <hr color="white">
+        <div id="message"></div>
         <div id="results"></div>
     </main>
     <aside>
