--- a/add-vehicle.html
+++ b/add-vehicle.html
@@ -61,8 +61,9 @@
         <div id="message"></div>
         <div id="results"></div>
     </main>
-    <aside>
-        <img src="add-vehicle.jpg" alt="add image">
+    <aside><hr color="white">&emsp;
+        <img src="img/add-vehicle.jpg" alt="add image" height="250" width="375">
+        <h3>&emsp;Register a new vehicle</h3>
     </aside>
     <footer>
         <p>&copy; psylp4_comp1004_cw2</p>
