--- a/search-vehicles.html
+++ b/search-vehicles.html
@@ -25,8 +25,9 @@
         <div id="message"></div>
         <div id="results"></div>
     </main>
-    <aside>
-        <img src="vehicles.jpg" alt="add image">
+    <aside>&emsp;&emsp;
+        <img src="img/vehicles.png" alt="add image" height="240" width="240">
+        <h3>Search vehicle by vehicle registration number</h3>
     </aside>
     <footer>
         <p>&copy; psylp4_comp1004_cw2</p>
