--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <div id="results"></div>
     </main>
     <aside>
-        <img src="people.jpg" alt="add image">
+        <img src="img/people.png" alt="add image" height="240" width="240">
+        <h3>Search people by name or license number</h3>
     </aside>
     <footer>
         <p>&copy; psylp4_comp1004_cw2</p>
