--- a/add-vehicle.html
+++ b/add-vehicle.html
@@ -57,8 +57,8 @@
                 <hr color="white">
                 <button type="submit">Add owner</button>
             </form>
-        </div>
-        <div id="message"></div>
+        </div><hr color="white">
+        <div id="message"></div><hr color="white">
         <div id="results"></div>
     </main>
     <aside><hr color="white">&emsp;
