--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <input type="text" id="license" name="license">
             <hr color="white">
             <button type="submit">Submit</button>
-        </form>
-        <div id="message"></div>
+        </form><hr color="white">
+        <div id="message"></div><hr color="white">
         <div id="results"></div>
     </main>
     <aside>
