--- a/search-vehicles.html
+++ b/search-vehicles.html
@@ -21,8 +21,8 @@
             <input type="text" id="rego" name="rego">
             <hr color="white">
             <button type="submit">Submit</button>
-        </form>
-        <div id="message"></div>
+        </form><hr color="white">
+        <div id="message"></div><hr color="white">
         <div id="results"></div>
     </main>
     <aside>&emsp;&emsp;
