--- a/search-vehicles.html
+++ b/search-vehicles.html
@@ -26,8 +26,8 @@
         <div id="results"></div>
     </main>
     <aside>&emsp;&emsp;
-        <img src="img/vehicles.png" alt="add image" height="240" width="240">
-        <h3>Search vehicle by vehicle registration number</h3>
+        <img src="img/vehicles.png" alt="add image" height="300" width="300">
+        <h3>&emsp;Search vehicle by vehicle registration number</h3>
     </aside>
     <footer>
         <p>&copy; psylp4_comp1004_cw2</p>
