--- a/add-vehicle.html
+++ b/add-vehicle.html
@@ -34,9 +34,9 @@
             <hr color="white">
             <button type="submit">Add</button>
         </form>
-        <div id="owner-details" style="display: none;">
+        <div id="owner-details">
             <h2>Owner Details</h2>
-            <form id="add-owner-form">
+            <form id="add-owner-form" style="display: none;">
                 <label for="personid">Person ID:</label>
                 <input type="text" id="personid" name="personid">
                 <hr color="white">
