--- a/add-vehicle.html
+++ b/add-vehicle.html
@@ -34,7 +34,7 @@
             <hr color="white">
             <button type="submit">Add</button>
         </form>
-        <div id="owner-details">
+        <div id="owner-details" style="display: none;">
             <h2>Owner Details</h2>
             <form id="add-owner-form" style="display: none;">
                 <label for="personid">Person ID:</label>
